# bbot-server

./: .dockerignore  .flake8  .gitignore  AGENTS.md  ASSET_ENRICHMENT_PLAN.md  ASSET_REMOVAL_PLAN.md  CLAUDE.md  Dockerfile  EVENTS_ACTIVITY_MIGRATION_PLAN.md  MONGO_POSTGRES_MIGRATION.md  README.md  build.sh  compose-agent.yml  compose-dev.yml  compose-server.yml  compose.yml  docker-compose.yml  helm_deployment_test.py  pyproject.toml  test_helm_deployment.py
.github/: dependabot.yml
.github/workflows/: docker-tests.yml  helm-tests.yml  tests.yml
bbot_io/: __init__.py  models.py  server.py
bbot_io/applets/: __init__.py  _base.py  base.py  events.py  scans.py  subdomains.py  targets.py  utils.py
bbot_io/apps/: __init__.py  events.py
bbot_io/backends/: __init__.py  _base.py  _sqlbase.py  mongo.py  postgres.py  sqlite.py
bbot_io/config/: __init__.py
bbot_io/interfaces/: __init__.py  _base.py  http.py  rest.py
bbot_io/modules/: __init__.py  base.py  mongo.py  sqlite.py
bbot_io/test/: base.py  bbot_preset.yml  conftest.py  test_event_validation.py  test_io_tests.py  test_mongo.py  test_postgres.py  test_sqlite.py
bbot_server/: __init__.py  assets.py  cli.py  compose.yml  config.py  connectionmanager.py  default_agent.sh  defaults.yml  defaults_docker.yml  errors.py  logger.py  models.py  preloader.py  scans.py  server.py  store.py  targets.py
bbot_server/agent/: __init__.py  agent.py
bbot_server/api/: __init__.py  _fastapi.py  app.py  mcp.py
bbot_server/applets/: __init__.py  _base.py  _root.py  _routing.py  activity.py  agents.py  assets.py  base.py  buckets.py  cloud.py  dns_links.py  emails.py  events.py  export.py  findings.py  open_ports.py  presets.py  redirects.py  risk.py  scan_runs.py  scans.py  stats.py  subdomains.py  targets.py  technologies.py  utils.py  web_screenshots.py
bbot_server/asset/: asset.py
bbot_server/asset_store/: README.md  __init__.py  asset.py  asset_store.py
bbot_server/assets/: __init__.py
bbot_server/backends/: __init__.py  _base.py  _sqlbase.py  postgres.py  sqlite.py
bbot_server/cli/: __init__.py  activity.py  activityctl.py  agent.py  agentctl.py  apikeyctl.py  asset.py  assetctl.py  assets.py  base.py  bbctl.py  bbctl_base.py  common.py  eventctl.py  events.py  findingctl.py  output.py  presetctl.py  scan.py  scan_editor.py  scanctl.py  scanrunsctl.py  scans.py  server.py  serverctl.py  targetctl.py  targets.py  technology_ctl.py  technologyctl.py  themes.py  userctl.py  utils.py
bbot_server/config/: __init__.py
bbot_server/db/: README.md  base.py  postgres.py  tables.py
bbot_server/event_store/: __init__.py  _base.py  mongo.py
bbot_server/fastapi/: __init__.py
bbot_server/interfaces/: __init__.py  _base.py  base.py  http.py  python.py
bbot_server/message_queue/: __init__.py  base.py  message_queue.py  nats.py  rabbitmq.py  redis.py
bbot_server/models/: __init__.py  activity.py  activity_models.py  agent_models.py  asset_models.py  assets.py  base.py  event_models.py  preset_models.py  scan_models.py  scans.py  stats_models.py  target_models.py  technology_models.py
bbot_server/modules/: __init__.py  tui_cli.py
bbot_server/store/: __init__.py  base_store.py
bbot_server/test/: _gen_scan_data.py  base.py  bbot_preset.yml  conftest.py  helpers.py  test_event_validation.py  (+1 more)
bbot_server_tests/: _gen_scan_data.py  conftest.py  test_applet_tests.py  test_message_queues.py  test_preset.yml
helm/: Chart.yaml  values.yaml
modules/: intelx_phonebook.py
presets/: normal_and_intelx_preset.yml
test/: conftest.py  test_asset_modules.py  test_event_store.py  test_open_ports.py
tests/: conftest.py  gen_scan_data.py  test_activities.py  test_applet_tests.py  test_archival.py  test_asset_indexes.py  test_authentication.py  test_cli.py  test_cli_tests.py  test_config.py  test_config.yml  test_config_docker.yml  test_docker_compose.py  test_hot_reload.py  test_index_diff.py  test_interfaces.py  test_message_queues.py  test_mongo_helpers.py  test_preset.yml  test_python_api.py  test_scheduled_tasks.py  test_utils.py  test_watchdog.py  test_worker.py
(+184 files in other folders)
