[tool.poetry]
name = "bbot-server"
version = "0.1.0"
description = ""
authors = ["TheTechromancer"]
license = "GPL-v3.0"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.30.1"
motor = "^3.4.0"
fastapi = "^0.111.0"
omegaconf = "^2.3.0"
bbot = {git = "https://github.com/blacklanternsecurity/bbot", rev = "3.0"}
orjson = "^3.10.12"
typer = "^0.15.1"
rich = "^13.9.4"
cachetools = "^5.5.0"
aio-pika = "^9.5.4"

[tool.poetry.scripts]
bbot-server = 'bbot_server.cli.server:bbot_server'
bbctl = 'bbot_server.cli:main'

[tool.ruff]
line-length = 119
format.exclude = ["bbot/test/test_step_1/test_manager_*"]
lint.ignore = ["E402", "E711", "E712", "E713", "E721", "E731", "E741", "F401", "F403", "F405", "F541", "F601"]

[tool.pytest.ini_options]
env = [
    "BBOT_TESTING = True",
]

[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"
pytest = "^8.3.2"
pytest-env = "^1.1.3"
ruff = "^0.8.4"
pytest-asyncio = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
