[tool.poetry]
name = "bbot-server"
version = "0.1.0"
description = ""
authors = ["TheTechromancer"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
orjson = "^3.10.12"
rich = "^13.9.4"
cachetools = "^5.5.0"
jsondiff = "^2.2.1"
websockets = "^14.1"
taskiq = "0.11.14"
typer = "^0.15.2"
redis = "^5.2.1"
taskiq-redis = "^1.0.3"
fastapi-mcp = "^0.3.3"
cloudcheck = "^7.2.0"
bbot = {git = "https://github.com/blacklanternsecurity/bbot", rev = "3.0"}
# pinning these as the latest versions are bugged
click = "8.1.8"
mcp = "1.7.0"
jmespath = "^1.0.1"
uvicorn = "^0.35.0"
pymongo = "^4.15.3"
textual = "^0.85.0"

[tool.poetry.scripts]
bbctl = 'bbot_server.cli.bbctl:main'

[tool.ruff]
line-length = 119
format.exclude = ["bbot/test/test_step_1/test_manager_*"]
lint.select = ["E", "F"]
lint.ignore = ["E402", "E711", "E712", "E713", "E721", "E731", "E741", "F403", "F405", "F541", "F601", "E501"]
target-version = "py310"
exclude = [
  "mongodb"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
env = [
    "BBOT_TESTING = True",
]
norecursedirs = ["mongodb"]

[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"
pytest = "^8.3.2"
pytest-env = "^1.1.3"
pytest-asyncio = "^0.25.0"
ruff = "^0.9.7"
pytest-rerunfailures = "^15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
